# spytester

./: .gitignore  Breakpoint.cpp  Breakpoint.h  CMakeLists.txt  README.md  SpiedProgram.cpp  SpiedProgram.h  SpiedThread.cpp  SpiedThread.h  Tracer.cpp  Tracer.h  TracingCommand.h  WatchPoint.cpp  WrappedFunction.h  build-debug.sh  build.sh
include/: Breakpoint.h  CallbackHandler.h  DynamicLinker.h  DynamicModule.h  DynamicNamespace.h  ElfBin.h  ElfFile.h  Logger.h  Meta.h  Relinkage.h  SpiedNamespace.h  SpiedProgram.h  SpiedThread.h  SpyLoader.h  Tracer.h  TracingCommand.h  WatchPoint.h  WrappedFunction.h
include/helpers/: filesystem.h
source/: Breakpoint.cpp  CallbackHandler.cpp  DynamicLinker.cpp  DynamicModule.cpp  DynamicNamespace.cpp  ElfBin.cpp  ElfFile.cpp  Loader.cpp  Logger.cpp  Relinkage.cpp  SpiedNamespace.cpp  SpiedProgram.cpp  SpiedThread.cpp  SpyLoader.cpp  Tracer.cpp  WatchPoint.cpp  utils.S
test/BasicTest/: BasicTest.cpp  TestExe.cpp  TestLib.cpp  TestLib.h  TestProgram.cpp
test/LoaderTest/: LoaderTest.cpp
test/TLSTest/: TLSProgram.cpp  TLSTest.cpp  TLSTestedLib.cpp  TLSTestedLib.h
test/ThreadIdentification/: TestedExe.cpp  TestedLib.cpp  TestedLib.h  Tester.cpp
test/WrapperTest/: WrapperTest.cpp  WrapperTestedLib.h
